# AlekSIS-App-Alsijil

./: CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml
aleksis/apps/alsijil/: __init__.py  actions.py  apps.py  data_checks.py  filters.py  forms.py  managers.py  menus.py  model_extensions.py  models.py  preferences.py  rules.py  tables.py  urls.py  util.py  views.py
aleksis/apps/alsijil/locale/ar/LC_MESSAGES/: django.po
aleksis/apps/alsijil/locale/de_DE/LC_MESSAGES/: django.po
aleksis/apps/alsijil/locale/fr/LC_MESSAGES/: django.po
aleksis/apps/alsijil/locale/la/LC_MESSAGES/: django.po
aleksis/apps/alsijil/locale/nb_NO/LC_MESSAGES/: django.po
aleksis/apps/alsijil/locale/tr_TR/LC_MESSAGES/: django.po
aleksis/apps/alsijil/migrations/: 0001_initial.py  0002_add_personal_note_filter.py  0002_excuse_type.py  0002_extra_mark.py  0002_group_notes.py  0003_extra_mark.py  0003_group_notes.py  0003_groups_of_person.py  0004_delete_personal_notes_filter.py  0004_group_notes.py  0008_data_check_result.py  0008_events_extra_lessons.py  0008_global_permissions.py  0009_class_roles.py  0009_group_roles.py  0010_events_extra_lessons.py  0011_tardiness_positive.py
aleksis/apps/alsijil/static/css/alsijil/: alsijil.css  full_register.css  lesson.css  person.css
aleksis/apps/alsijil/static/js/alsijil/: person.js
aleksis/apps/alsijil/templates/alsijil/: lesson.html  manage_personal_note_filter.html  manage_personal_note_filters.html  personal_note_filters.html  register_absence.html  week_view.html
aleksis/apps/alsijil/templates/alsijil/absences/: register.html
aleksis/apps/alsijil/templates/alsijil/class_register/: all_objects.html  groups.html  lesson.html  person.html  persons.html  week_view.html
aleksis/apps/alsijil/templates/alsijil/class_role/: create.html  edit.html  list.html
aleksis/apps/alsijil/templates/alsijil/data_check/: list.html
aleksis/apps/alsijil/templates/alsijil/excuse_type/: list.html
aleksis/apps/alsijil/templates/alsijil/group_role/: assign.html  assigned_list.html  assignment_options.html  chip.html  edit.html  list.html
aleksis/apps/alsijil/templates/alsijil/partials/: absences.html  lesson_status_icon.html  mark_as_buttons.html  (+3 more)
aleksis/apps/alsijil/templates/templated_email/: data_checks.email
aleksis/apps/alsijil/templatetags/: time_helpers.py
aleksis/apps/alsijil/util/: alsijil_helpers.py  predicates.py
biscuit/apps/alsijil/: __init__.py  apps.py  forms.py  menus.py  model_extensions.py  models.py  tables.py  urls.py  views.py
biscuit/apps/alsijil/migrations/: 0001_initial.py  0002_add_personal_note_filter.py
biscuit/apps/alsijil/templates/alsijil/: group_week.html  lesson.html  manage_absence.html  manage_personal_note_filter.html  manage_personal_note_filters.html  personal_note_filters.html  register_absence.html  week_view.html
(+14 files in other folders)
