[tool.poetry]
name = "BiscuIT-App-Alsijil"
version = "1.0a4dev0"
packages = [
    { include = "biscuit" }
]
readme = "README.rst"

description = "BiscuIT School Information System (SIS) - App Alsijil (Class register)"
authors = ["Dominik George <dominik.george@teckids.org>", "mirabilos <thorsten.glaser@teckids.org>", "Tom Teichler <tom.teichler@teckids.org>"]
license = "EUPL-1.2"
homepage = "https://biscuit.edugit.io/"
repository = "https://edugit.org/BiscuIT/BiscuIT-App-Alsijil"
documentation = "https://biscuit.edugit.io/BiscuIT-ng/docs/html/"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.7"
BiscuIT-ng = { path = "../../.." }
BiscuIT-App-Chronos = { path = "../BiscuIT-App-Chronos" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
