[tool.poetry]
name = "AlekSIS-App-Alsijil"
version = "1.0a4dev0"
packages = [
    { include = "aleksis" }
]
readme = "README.rst"

description = "AlekSIS (School Information System) - App Alsijil (Class register)"
authors = ["Dominik George <dominik.george@teckids.org>", "mirabilos <thorsten.glaser@teckids.org>", "Tom Teichler <tom.teichler@teckids.org>"]
license = "EUPL-1.2"
homepage = "https://aleksis.edugit.io/"
repository = "https://edugit.org/AlekSIS/AlekSIS-App-Alsijil"
documentation = "https://aleksis.edugit.io/AlekSIS/docs/html/"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.7"
AlekSIS = { path = "../../.." }
AlekSIS-App-Chronos = { path = "../AlekSIS-App-Chronos" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
