[tool.poetry]
name = "AlekSIS-App-Alsijil"
version = "2.0a1"
packages = [
    { include = "aleksis" }
]
readme = "README.rst"
include = ["CHANGELOG.rst", "LICENCE.rst"]

description = "AlekSIS (School Information System) — App كتاب السجل (class register and school records)"
authors = ["Dominik George <dominik.george@teckids.org>", "mirabilos <thorsten.glaser@teckids.org>", "Tom Teichler <tom.teichler@teckids.org>"]
license = "EUPL-1.2"
homepage = "https://aleksis.edugit.io/"
repository = "https://edugit.org/AlekSIS/AlekSIS-App-Alsijil"
documentation = "https://aleksis.edugit.io/AlekSIS/docs/html/"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.7"
AlekSIS = { path = "../../.." }
AlekSIS-App-Chronos = { path = "../AlekSIS-App-Chronos" }

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
